--- a/wercker.yml
+++ b/wercker.yml
@@ -17,3 +17,21 @@ build:
         name: terraform apply
         code: |
           cd terraform && terraform apply
+destroy:
+  steps:
+    - install-packages:
+        packages: unzip
+    - davidlluna/terraform-install:
+        version: 0.9.1
+    - script:
+        name: terraform validate
+        code: |
+          cd terraform && terraform validate
+    - script:
+        name: terraform init
+        code: |
+          cd terraform && terraform init
+    - script:
+        name: terraform apply
+        code: |
+          cd terraform && terraform destroy
